<?xml version="1.0"?>
<!--
  ~ Raymond Kirk (Tunstill) Copyright (c) 2020
  ~ Email: ray.tunstill@gmail.com
-->

<package format="2">
  <name>topic_store</name>
  <version>0.0.1</version>
  <description>
    The topic_store package.
    Used for serialising common ROS topic messages to a database or filesystem.
  </description>

  <maintainer email="rkirk@lincoln.ac.uk">RaymondKirk</maintainer>
  <maintainer email="ray.tunstill@gmail.com">RaymondTunstill</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>